--- a/index.html
+++ b/index.html
@@ -5,14 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
 
-    <title>Proyecto 1</title>
+    <link rel = "icon" href="icono.png" type = "image/x-icon">
+
+    <title>Cuán segura es mi contraseña?</title>
   </head>
   <body>
-    <h1>Proyecto 1</h1>
-
+    <div class="container-fluid">
+      <div class="jumbotron">
+      <h1>Cuán segura es mi contraseña?</h1>
+      <p>Olvidate de las contraseñas vulnerables verificando su seguridad en instantes!</p> 
+      </div>
+    </div>
+    
+    <div class="container-fluid">
+      <form class="form-group ">
+        <input type="password" class="form-control mb-3" id="password" placeholder="Password">
+        <div class="form-check mb-3">
+          <input type="checkbox" class="form-check-input" onclick="togglePassword()"></input>
+          <label class="form-check-label" for="gridCheck">
+            Mostrar contraseña
+          </label>
+        </div>
+        <button type="submit" class="btn btn-primary mb-3">Verificar</button>
+      </form>
+    </div>
+    
     <!-- JavaScript -->
+    <script src="js/bootstrap.js"></script>
     <script src="js/app.js"></script>
+
   </body>
 </html>
