--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/app.css">
+  
     <link rel = "icon" href="icono.png" type = "image/x-icon">
 
     <title>Cuán segura es mi contraseña?</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="jumbotron">
-      <h1>Cuán segura es mi contraseña?</h1>
-      <p>Olvidate de las contraseñas vulnerables verificando su seguridad en instantes!</p> 
+    <div class="container-fluid my-container">
+      <div class="row">
+        <div class="col-9">
+          <h1>Cuán segura es mi contraseña?</h1>
+        </div>
+        <div class="col-3">
+          <p>Olvidate de las contraseñas vulnerables verificando su seguridad en instantes!</p></div>
       </div>
     </div>
     
@@ -33,7 +37,7 @@
     </div>
     
     <!-- JavaScript -->
-    <script src="js/bootstrap.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
 
   </body>
