fix boton validar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="row p-3">
           <div class="col-11 text-center">
-            <button type="submit" class="btn btn-primary btn-lg mb-3" onclick="togglePassword()">Verificar</button>
+            <button type="button" class="btn btn-primary btn-lg mb-3" onclick="checkPassword()">Verificar</button>
           </div>
         </div>
         
