--- a/index.html
+++ b/index.html
@@ -36,8 +36,83 @@
       </form>
     </div>
     
-    <div class="container-fluid">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <table class="table table-hover">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col" colspan="2">Puntos a favor</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Letras minúsculas</td>
+                <td>No</td>
+              </tr>
+              <tr>
+                <td>Letras mayúsculas</td>
+                <td>No</td>
+              </tr>
+              <tr>
+              <tr>
+                <td>Números</td>
+                <td>No</td>
+              </tr>
+              <tr>
+                <td>Símbolos</td>
+                <td>No</td>
+              </tr>
+              <tr>
+                <td>Longitud</td>
+                <td>No</td>
+              </tr>
+              <tr>
+                <td>Caracteres raros: ascii > 127</td>
+                <td>No</td>
+              </tr>
+            </tbody>
+          </table>
+          <table class="table table-hover">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col" colspan="2">Puntos en contra</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Solo letras</td>
+                <td>No</td>
+              </tr>
+              <tr>
+                <td>Solo números</td>
+                <td>No</td>
+              </tr>
+              <tr>
+              <tr>
+                <td>Letras consecutivas</td>
+                <td>No</td>
+              </tr>
+              <tr>
+                <td>Números consecutivos</td>
+                <td>No</td>
+              </tr>
+              <tr>
+                <td>Secuencia de números</td>
+                <td>No</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col">
 
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          
+        </div>
+      </div>
     </div>
 
     <!-- <div class="container-fluid">
