agrego tabla de ultimas passwords checkeadas

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     
     <div class="container">
       <div class="row">
-        <div class="col">
-          <table class="table table-hover">
+        <div class="col-7">
+          <table class="table">
             <thead class="thead-light">
               <tr>
                 <th scope="col" colspan="2">Puntos a favor</th>
@@ -55,7 +55,6 @@
                 <td>No</td>
               </tr>
               <tr>
-              <tr>
                 <td>Números</td>
                 <td>No</td>
               </tr>
@@ -68,7 +67,7 @@
                 <td>No</td>
               </tr>
               <tr>
-                <td>Caracteres raros: ascii > 127</td>
+                <td>Caracteres raros (ASCII > 127)</td>
                 <td>No</td>
               </tr>
             </tbody>
@@ -89,7 +88,6 @@
                 <td>No</td>
               </tr>
               <tr>
-              <tr>
                 <td>Letras consecutivas</td>
                 <td>No</td>
               </tr>
@@ -105,17 +103,35 @@
           </table>
         </div>
         <div class="col">
-
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          
+          <table class="table table-hover">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">Ultimas contraseñas</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>password 1</td>
+              </tr>
+              <tr>
+                <td>password 2</td>
+              </tr>
+              <tr>
+                <td>password 3</td>
+              </tr>
+              <tr>
+                <td>password 4</td>
+              </tr>
+              <tr>
+                <td>password 5</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
 
-    <!-- <div class="container-fluid">
+    <div class="container-fluid">
       <footer id="footer">
         <div class="row jus">
           <div class="col-2">
@@ -126,9 +142,8 @@
           </div>
         </div>
       </footer>
-    </div> -->
+    </div>
     <!-- JavaScript -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
