--- a/index.html
+++ b/index.html
@@ -103,28 +103,13 @@
           </table>
         </div>
         <div class="col">
-          <table class="table table-hover">
+          <table class="table table-hover" id="tablaPasswords">
             <thead class="thead-light">
               <tr>
                 <th scope="col">Ultimas contraseñas</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>password 1</td>
-              </tr>
-              <tr>
-                <td>password 2</td>
-              </tr>
-              <tr>
-                <td>password 3</td>
-              </tr>
-              <tr>
-                <td>password 4</td>
-              </tr>
-              <tr>
-                <td>password 5</td>
-              </tr>
+            <tbody id="tablaPasswordsBody">
             </tbody>
           </table>
         </div>
