fix breakpoint tablas acomo diseño footer

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     
     <div class="container">
       <div class="row">
-        <div class="col-7">
-          <table class="table">
+        <div class="col-md-7">
+          <table class="table tabla-borde-gris">
             <thead class="thead-light">
               <tr>
                 <th scope="col" colspan="2">Puntos a favor</th>
@@ -72,7 +72,7 @@
               </tr>
             </tbody>
           </table>
-          <table class="table table-hover">
+          <table class="table table-hover tabla-borde-gris">
             <thead class="thead-light">
               <tr>
                 <th scope="col" colspan="2">Puntos en contra</th>
@@ -102,8 +102,8 @@
             </tbody>
           </table>
         </div>
-        <div class="col">
-          <table class="table table-hover" id="tablaPasswords">
+        <div class="col-md-5">
+          <table class="table table-hover tabla-borde-gris" id="tablaPasswords">
             <thead class="thead-light">
               <tr>
                 <th scope="col">Ultimas contraseñas</th>
@@ -117,12 +117,12 @@
     </div>
 
     <div class="container-fluid">
-      <footer id="footer">
-        <div class="row jus">
-          <div class="col-2">
+      <footer class="footer">
+        <div class="row justify-content-center">
+          <div class="col-auto">
             <p>Hecho por <a href="https://github.com/tscandalitta">Tomás Scandalitta</a>.</p>
           </div>
-          <div class="col-2">
+          <div class="col-auto">
             <p>Basado en <a href="https://getbootstrap.com" rel="nofollow">Bootstrap</a>.</p>
           </div>
         </div>
