--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </div>
     
     <div class="container">
-      <div class="row">
-        <div class="col-md-7">
+      <div class="row justify-content-between">
+        <div class="col-md-6">
           <table class="table tabla-borde-gris">
             <thead class="thead-light">
               <tr>
@@ -106,7 +106,7 @@
           <table class="table table-hover tabla-borde-gris" id="tablaPasswords">
             <thead class="thead-light">
               <tr>
-                <th scope="col">Ultimas contraseñas</th>
+                <th scope="col" id="tablaPasswordsHeader">Últimas contraseñas</th>
               </tr>
             </thead>
             <tbody id="tablaPasswordsBody">
@@ -116,7 +116,7 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container">
       <footer class="footer">
         <div class="row justify-content-center">
           <div class="col-auto">
