--- a/index.html
+++ b/index.html
@@ -19,28 +19,26 @@
     </div>
     
     <div class="container-fluid">
-      <form class="form-group">
         <div class="row pwd-row p-1">
           <div class="col-11">
-            <input type="password" class="password" id="password-input" placeholder="Password">
+            <input type="password" class="password" id="password-input" placeholder="Contraseña">
           </div>
           <div class="col-1">
-            <i id="password-icon" class="fa fa-eye pwd-icon" onclick="togglePassword()"></i>
+            <i class="fa fa-eye pwd-icon" id="password-icon" onclick="togglePassword()"></i>
           </div>
         </div>
         <div class="row p-3">
           <div class="col-11 text-center">
-            <button type="button" class="btn btn-primary btn-lg mb-3" onclick="checkPassword()">Verificar</button>
+            <button type="button" class="btn bg-azul btn-lg mb-3" id="password-button" onclick="checkPassword()">Verificar</button>
           </div>
         </div>
-      </form>
     </div>
     
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-md-6">
           <table class="table tabla-borde-gris">
-            <thead class="thead-light">
+            <thead class="bg-azul">
               <tr>
                 <th scope="col" colspan="2">Puntos a favor</th>
               </tr>
@@ -72,8 +70,8 @@
               </tr>
             </tbody>
           </table>
-          <table class="table table-hover tabla-borde-gris">
-            <thead class="thead-light">
+          <table class="table tabla-borde-gris">
+            <thead class="bg-azul">
               <tr>
                 <th scope="col" colspan="2">Puntos en contra</th>
               </tr>
@@ -103,10 +101,10 @@
           </table>
         </div>
         <div class="col-md-5">
-          <table class="table table-hover tabla-borde-gris" id="tablaPasswords">
-            <thead class="thead-light">
+          <table class="table tabla-borde-gris" id="tablaPasswords">
+            <thead class="bg-azul">
               <tr>
-                <th scope="col" id="tablaPasswordsHeader">Últimas contraseñas</th>
+                <th scope="col" id="tablaPasswordsHeader">Últimas contraseñas chequeadas</th>
               </tr>
             </thead>
             <tbody id="tablaPasswordsBody">
