--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     </div>
     <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+    <script src="js/clases.js"></script>
     <script src="js/store.js"></script>
     <script src="js/app.js"></script>
   </body>
