acomodo formato de alert

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       
       <div class="row p-3 justify-content-center">
         <div class="alert alert-secondary oculto" id="alert-resultado" role="alert">
-          A simple secondary alert—check it out!
+          <h4 class="alert-heading" id="titulo-alert"></h4>
+          <p class="mb-0">Tu contraseña es <strong id="alert-complejidad"></strong>. El puntaje general es <strong id="alert-puntaje"></strong></p>
         </div>
       </div>
       
