--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <div class="row p-3 justify-content-center">
         <div class="alert alert-secondary oculto" id="alert-resultado" role="alert">
           <h4 class="alert-heading" id="titulo-alert"></h4>
-          <p class="mb-0">Tu contraseña es <strong id="alert-complejidad"></strong>. El puntaje general es <strong id="alert-puntaje"></strong></p>
+          <p class="mb-0">Tu contraseña es <strong id="alert-complejidad"></strong>. 
+              El puntaje general es <strong id="alert-puntaje"></strong>/100</p>
         </div>
       </div>
       
