--- a/index.html
+++ b/index.html
@@ -50,17 +50,19 @@
     <div class="container">
       
       <div class="row p-3 justify-content-center">
-        <div class="alert alert-secondary oculto" id="alert-resultado" role="alert">
-          <h4 class="alert-heading" id="titulo-alert"></h4>
-          <p class="mb-0">Tu contraseña es <strong id="alert-complejidad"></strong>. 
-              El puntaje general es <strong id="alert-puntaje"></strong>/100</p>
+        <div class="col-6">
+          <div class="alert alert-secondary oculto" id="alert-resultado" role="alert">
+            <h4 class="alert-heading" id="titulo-alert"></h4>
+            <p class="mb-0">Tu contraseña es <strong id="alert-complejidad"></strong>. 
+                El puntaje general es <strong id="alert-puntaje"></strong>/100</p>
+          </div>
         </div>
       </div>
       
       <div class="row justify-content-between">
         <div class="col-md-6">
-          <table class="table tabla-borde-gris" id="tabla-puntos-favor">
-            <thead class="bg-gris">
+          <table class="table table-dark" id="tabla-puntos-favor">
+            <thead>
               <tr>
                 <th scope="col" colspan="2">Puntos a favor</th>
               </tr>
