--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="css/app.css">
   
@@ -61,8 +61,8 @@
       
       <div class="row justify-content-between">
         <div class="col-md-6">
-          <table class="table table-dark" id="tabla-puntos-favor">
-            <thead>
+          <table class="table" id="tabla-puntos-favor">
+            <thead class="thead-light">
               <tr>
                 <th scope="col" colspan="2">Puntos a favor</th>
               </tr>
@@ -70,8 +70,8 @@
             <tbody id="tabla-puntos-favor-body">
             </tbody>
           </table>
-          <table class="table tabla-borde-gris" id="tabla-puntos-contra">
-            <thead class="bg-gris">
+          <table class="table" id="tabla-puntos-contra">
+            <thead class="thead-light">
               <tr>
                 <th scope="col" colspan="2">Puntos en contra</th>
               </tr>
@@ -82,8 +82,8 @@
         </div>
         <div class="col-md-5">
           <div class="table-responsive">
-            <table class="table tabla-borde-gris" id="tablaPasswords">
-              <thead class="bg-gris">
+            <table class="table" id="tablaPasswords">
+              <thead class="thead-light">
                 <tr>
                   <th scope="col" id="tablaPasswordsHeader">Últimas contraseñas chequeadas</th>
                 </tr>
