agrego tips para contraseña mas segura y abro links en nueva pestaña

--- a/index.html
+++ b/index.html
@@ -96,17 +96,37 @@
           </div>
         </div>
       </div>
-      
     </div>
-    
-    <div class="container">
+
+    <div class="container mt-5">
+      <div class="card">
+        <div class="card-header">
+          <strong>Tips para una contraseña más segura</strong> 
+        </div>
+        <div class="card-body">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Utiliza un mínimo de 8 caracteres. Mientras más, mejor.</li>
+            <li class="list-group-item">Alterna entre mayúsculas, minúsculas, números y símbolos.</li>
+            <li class="list-group-item">Usa una contraseña diferente para cada cuenta.</li>
+            <li class="list-group-item">No utilices datos personales tales como nombres, fechas o lugares.</li>
+            <li class="list-group-item">Evita palabras y patrones simples como "password", "123456", "qwerty", etc.</li>
+            <li class="list-group-item">Nunca dejes tus contraseñas anotadas cerca de la computadora.</li>
+            <li class="list-group-item">Si te cuesta recordar varias contraseñas, considera usar un 
+              <a target="_blank" href="http://www.google.com/search?q=gestor+de+contraseñas">gestor de contraseñas</a>.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-5">
+      <hr>
       <footer class="footer">
         <div class="row justify-content-center">
           <div class="col-auto">
-            <p>Hecho por <a href="https://github.com/tscandalitta">Tomás Scandalitta</a>.</p>
+            <p>Hecho por <a href="https://github.com/tscandalitta" target="_blank">Tomás Scandalitta</a>.</p>
           </div>
           <div class="col-auto">
-            <p>Powered by <a href="https://getbootstrap.com" rel="nofollow">Bootstrap</a>.</p>
+            <p>Powered by <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a>.</p>
           </div>
         </div>
       </footer>
