--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="col-1">
           <div class="custom-control custom-switch">
             <input type="checkbox" class="custom-control-input" id="darkSwitch"/>
-            <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+            <label class="custom-control-label" for="darkSwitch">Modo oscuro</label>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col">
           <table class="table" id="tabla-puntos-favor">
-            <thead class="thead-light">
+            <thead class="thead">
               <tr>
                 <th scope="col" colspan="2">Puntos a favor</th>
               </tr>
@@ -73,7 +73,7 @@
         </div>
         <div class="col">
           <table class="table" id="tabla-puntos-contra">
-            <thead class="thead-light">
+            <thead class="thead">
               <tr>
                 <th scope="col" colspan="2">Puntos en contra</th>
               </tr>
@@ -85,9 +85,9 @@
         <div class="col-md-4">
           <div class="table-responsive">
             <table class="table" id="tablaPasswords">
-              <thead class="thead-light">
+              <thead class="thead">
                 <tr>
-                  <th scope="col" id="tablaPasswordsHeader">Últimas contraseñas chequeadas</th>
+                  <th scope="col" id="tablaPasswordsHeader">Contraseñas guardadas</th>
                 </tr>
               </thead>
               <tbody id="tablaPasswordsBody">
@@ -98,10 +98,11 @@
       </div>
     </div>
 
-    <div class="container mt-5">
+    <div class="container mt-4">
+      <hr class="mb-5">
       <div class="card">
         <div class="card-header">
-          <strong>Tips para una contraseña más segura</strong> 
+          <strong>Tips para mantener más seguras tus contraseñas</strong> 
         </div>
         <div class="card-body">
           <ul class="list-group list-group-flush">
