--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <input type="password" class="password" id="password-input" placeholder="Ingresa tu contraseña">
           </div>
           <div class="col-1">
-            <i class="far fa-eye pwd-icon" id="password-icon"></i>
+            <i class="far fa-eye pwd-icon" id="password-icon" title="Mostrar contraseña"></i>
           </div>
         </div>
         <div class="row p-3">
@@ -122,9 +122,12 @@
     <div class="container mt-5">
       <hr>
       <footer class="footer">
-        <div class="row justify-content-center">
+        <div class="row justify-content-between">
           <div class="col-auto">
             <p>Hecho por <a href="https://github.com/tscandalitta" target="_blank">Tomás Scandalitta</a>.</p>
+          </div>
+          <div class="col-auto">            
+            <p><img src="icono.png" class="footer-icon"/> ¿Cuán segura es mi contraseña?, Inc</p>
           </div>
           <div class="col-auto">
             <p>Powered by <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a>.</p>
