Muestro puntaje en la tabla de contraseñas

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             <table class="table" id="tablaPasswords">
               <thead class="thead">
                 <tr>
-                  <th scope="col" id="tablaPasswordsHeader">Contraseñas guardadas</th>
+                  <th scope="col">Contraseñas guardadas</th>
+                  <th scope="col" class="td-align-right">Puntaje</th>
                 </tr>
               </thead>
               <tbody id="tablaPasswordsBody">
