--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
     <script src="js/dark-mode-switch.js"></script>
     <script src="js/clases.js"></script>
     <script src="js/store.js"></script>
+    <script src="js/visual.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
