--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Verifique qué tan segura es su contraseña de una forma totalmente sencilla
+      y lea los tips para fortalecerla.">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.min.css">
@@ -35,7 +37,7 @@
     <div class="container-fluid">
         <div class="row pwd-row justify-content-end p-1">
           <div class="col-10">
-            <input type="password" class="password" id="password-input" placeholder="Ingresa tu contraseña">
+            <input type="password" class="password" id="password-input" placeholder="Ingresa tu contraseña" lab>
           </div>
           <div class="col-1 align-self-center">
             <i class="far fa-eye pwd-icon" id="password-icon" title="Mostrar contraseña"></i>
@@ -114,7 +116,7 @@
             <li class="list-group-item">Evita palabras y patrones simples como "password", "123456", "qwerty", etc.</li>
             <li class="list-group-item">Nunca dejes tus contraseñas anotadas cerca de la computadora.</li>
             <li class="list-group-item">Si te cuesta recordar varias contraseñas, considera usar un 
-              <a target="_blank" href="http://www.google.com/search?q=gestor+de+contraseñas">gestor de contraseñas</a>.</li>
+              <a target="_blank" href="http://www.google.com/search?q=gestor+de+contraseñas" rel="noreferrer">gestor de contraseñas</a>.</li>
           </ul>
         </div>
       </div>
@@ -125,15 +127,15 @@
       <footer class="footer">
         <div class="row justify-content-center">
           <div class="col-auto">
-            <p>Hecho por <a href="https://github.com/tscandalitta" target="_blank">Tomás Scandalitta</a>.</p>
+            <p>Hecho por <a href="https://github.com/tscandalitta" target="_blank" rel="noreferrer">Tomás Scandalitta</a>.</p>
           </div>
           <div class="col-auto mx-5">
             <vr></vr>
             
-            <p><img src="icono.png" class="footer-icon"/> ¿Cuán segura es mi contraseña?, Inc</p>
+            <p><img src="icono.png" class="footer-icon" alt="logo"/> ¿Cuán segura es mi contraseña?, Inc</p>
           </div>
           <div class="col-auto">
-            <p>Powered by <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a>.</p>
+            <p>Powered by <a href="https://getbootstrap.com" target="_blank" rel="noreferrer">Bootstrap</a>.</p>
           </div>
         </div>
       </footer>
