--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/app.min.css">
   
     <link rel = "icon" href="icono.png" type = "image/x-icon">
 
@@ -143,10 +143,10 @@
 
     <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-    <script src="js/dark-mode-switch.js"></script>
-    <script src="js/clases.js"></script>
-    <script src="js/store.js"></script>
-    <script src="js/visual.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/dark-mode-switch.min.js"></script>
+    <script src="js/clases.min.js"></script>
+    <script src="js/store.min.js"></script>
+    <script src="js/visual.min.js"></script>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
