--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container-fluid">
         <div class="row pwd-row justify-content-end p-1">
           <div class="col-10">
-            <input type="password" class="password" id="password-input" placeholder="Ingresa tu contraseña" lab>
+            <input type="password" class="password" id="password-input" placeholder="Ingresa tu contraseña">
           </div>
           <div class="col-1 align-self-center">
             <i class="far fa-eye pwd-icon" id="password-icon" title="Mostrar contraseña"></i>
